--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <a href="https://www.linkedin.com/in/thiago-santos-b23b8a1a4/" class="contato" target="_blank"> <img src="imagens/favicons/icone-linkedin.png" alt="linkedin logo"> </a>
                     </p>
 
-                <p class="autoria">Projeto Desenvolvido por Thiago Santos.</p>
+                <p class="autoria">Projeto Desenvolvido por Thiago Santos!</p>
             
              </p>
 
